# attack_surface_approximation

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
attack_surface_approximation/: __init__.py  attack_surface_approximation.py  cli.py  configuration.py  exceptions.py
attack_surface_approximation/arguments_fuzzing/: __init__.py  arguments.py  arguments_types.py  fuzzer.py  fuzzing_sequence_generator.py  qbdi_analysis.py
attack_surface_approximation/dictionaries_generators/: __init__.py  generator.py
attack_surface_approximation/dictionaries_generators/heuristics/: __init__.py  binary_pattern_matching.py  common.py  generation.py  man.py  man_parsing.py
attack_surface_approximation/input_streams/: __init__.py  detector.py  ghidra_automation.py  ghidra_decompilation.py
attack_surface_approximation/static_input_streams_detection/: __init__.py  detector.py  ghidra_automation.py  ghidra_decompilation.py
attack_surface_discovery/: __init__.py  attack_surface_discovery.py  configuration.py  exceptions.py  ghidra_automation.py
docker/: Dockerfile.qbdi_docker  qbdi_preload_template.c
examples/dictionaries/: common.txt  man.txt
others/dictionaries_examples/: all.txt  top_1000.txt
others/qbdi_docker/: Dockerfile  qbdi_preload_template.c
tests/multiple_inputs/: Makefile  source.c
