[tool.poetry]
name = "attack_surface_approximation"
description = "Module for approximating the attack surface of an executable"
authors = ["OpenCRS"]
version = "0.1.0"

[tool.poetry.dependencies]
commons = { path = "../commons", develop = false }
python = "^3.10"
pycparser = "^2.21"
pyelftools = "^0.29"
docker = "^6.1.2"
rich = "^12.5.1"
click = "^8.1.3"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.10.1"
pylint = "^2.14.4"
pyproject-flake8 = "^0.0.1-alpha.5"
flake8-annotations = "^2.9.1"

[tool.poetry.scripts]
attack_surface_approximation = "attack_surface_approximation.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
init-hook="import sys; sys.path.append('.')"

[tool.pylint.MESSAGES_CONTROL]
disable="missing-function-docstring, missing-class-docstring, missing-module-docstring"

[tool.flake8]
extend-ignore = "ANN101,"
max-line-length=88
per-file-ignores = """
    ./**/__init__.py: F401
"""

[tool.black]
line-length = 79
preview = true
